--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,16 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
-
+  host: localhost
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  database: personal_website_development
 test:
   <<: *default
-  database: db/test.sqlite3
-
+  database: personal_website_test
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: personal_website_production
+  username: personal_website
+  password: <%= ENV['personal_website_DATABASE_PASSWORD'] %>
